<resources>
    <string name="app_name">Calculator</string>

    <string name="mode">mode</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="equality">=</string>
    <string name="period">.</string>
    <string name="percent">%</string>
    <string name="clear">c</string>
    <string name="sign">+/-</string>
    <string name="all_clear">ac</string>
    
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="rand">rand</string>
    <string name="fact">x!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="exp">exp</string>
    <string name="ln">ln</string>
    <string name="lg">lg</string>
    <string name="log2">log2</string>
    <string name="sqrt">√x</string>
    <string name="cubic_root">3√x</string>
    <string name="n_root">n√x</string>
    <string name="inverse">1/x</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="power">x^n</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

